# ResearchTraining

./: .gitignore  README.md
tracking/: .env.example  .gitignore  README.md  docker-compose.yml
training/: .env.example  .gitignore  README.md  env_setup.sh  pyproject.toml  requirements.txt  tailscale_runpod_env.sh  tailscale_runpod_setup.sh  tailscale_setup.sh
training/scripts/: .gitignore  convert_results_json_to_csv.py
training/src/: .gitignore  README.md  dino.py  qwen.py
training/src/ResearchTraining/: metrics.py
training/src/ResearchTraining/models/: dino.py  qwen.py  yolo.py
training/src/ResearchTraining/util/: detections.py  io.py  metrics.py
training/src/experiments/grounding_dino/: README.md  config.yaml  run.py
training/src/experiments/qwen/: run.py
training/src/experiments/qwen_enlarge/: README.md  config.yaml  run.py
training/src/experiments/yolo/: .gitignore  README.md  config.yaml  run.py
training/src/experiments/yolo_qwen/: config.yaml  run.py
training/src/util/: io.py
training/vlm/: README.md  dino_eval.py  eval_config.yaml  qwen_eval.py
training/vlm/util/: io.py  metrics.py
training/vlm/util/old/: metrics_slop.py
